write output to png

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,10 @@ project(spectral)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
+include_directories(src)
 include_directories(/opt/homebrew/include)
+include_directories(extern/lodepng)
+
 link_directories(/opt/homebrew/lib)
 
 set(CXX_FLAGS "-Wall -g -O3")
@@ -18,5 +21,7 @@ add_executable(spectral
     src/geometry/Mesh.cc
     src/geometry/AABB.cc
     src/geometry/BVH.cc
+    extern/lodepng/lodepng.cpp
 )
+
 include_directories(src)
