--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "extern/lodepng"]
-	path = extern/lodepng
-	url = https://github.com/lvandeve/lodepng.git
+[submodule "extern/stb"]
+	path = extern/stb
+	url = https://github.com/nothings/stb.git
